--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,8 @@
   </head>
   <body>
       <p>Welcome to chat app</p>
+      
       <script src="/socket.io/socket.io.js"></script>
-      <script>
-        const socket = io();
-
-        socket.on("connect", () => {
-          console.log("connected to server");
-        });
-        socket.on("disconnect", () => {
-          console.log("disconnected from server");
-        });
-      </script>
+      <script src="/scripts/index.js"></script>
   </body>
 </html>
