--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <input name="message" type="text" placeholder="type your message"/>
         <button>send</button>
       </form>
+      <p id="place"></p>
+      <button id="send-location">Send location</button>
       <script src="/socket.io/socket.io.js"></script>
       <script src="/scripts/libs/jquery-3.3.1.min.js" ></script>
       <script src="/scripts/index.js"></script>
