--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,26 @@
 <html>
   <head>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="/css/styles.css">
   </head>
-  <body>
-      <p>Welcome to chat app</p>
+  <body class="chat">
+      <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users">
+        </div>
+      </div>
+      <div class="chat__main">
+        <ul id="messages" class="chat__messages"></ul>
+        <p id="place" class="place">Location: </p>
+        <div class="chat__footer">
+          <form id="message-form">
+            <input name="message" type="text" placeholder="type your message" autofocus autocomplete="off"/>
+            <button>send</button>
+          </form>
 
-      <ul id="messages"></ul>
-
-      <form id="message-form">
-        <input name="message" type="text" placeholder="type your message"/>
-        <button>send</button>
-      </form>
-      <p id="place"></p>
-      <button id="send-location">Send location</button>
+          <button id="send-location">Send location</button>
+        </div>
+      </div>
       <script src="/socket.io/socket.io.js"></script>
       <script src="/scripts/libs/jquery-3.3.1.min.js" ></script>
       <script src="/scripts/index.js"></script>
